# pytest-flake8

./: NEWS.rst  README.rst  mypy.ini  pyproject.toml  pytest.ini  pytest_flake8.py  tox.ini
docs/: conf.py  index.rst
newsfragments/: +6b4b13f5.feature.rst  1.bugfix.rst  2.bugfix.1.rst  2.bugfix.2.rst  2.bugfix.rst  4.feature.rst
tests/: test_flake8.py
