[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-flake8"
authors = [
	{ name = "Thorsten Lockert", email = "tholo@sigmasoft.com" },
]
version = "1.1.1"
description = "pytest plugin to check FLAKE8 requirements"
readme = "README.rst"
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: BSD License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development",
	"Topic :: Software Development :: Quality Assurance",
	"Topic :: Software Development :: Testing",
]
dependencies = [
	"flake8>=4.0",
	"pytest>=7.0",
]

[project.urls]
Source = "https://github.com/tholo/pytest-flake8"

[project.entry-points.pytest11]
flake8 = "pytest_flake8"
