[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-flake8"
authors = [
	{ name = "Thorsten Lockert", email = "tholo@sigmasoft.com" },
]
maintainers = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "pytest plugin to check FLAKE8 requirements"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development",
	"Topic :: Software Development :: Quality Assurance",
	"Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
	"flake8 >= 4.0",
	"pytest >= 7.0",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/coherent-oss/pytest-flake8"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",

	# local
]
doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.entry-points.pytest11]
flake8 = "pytest_flake8"

[tool.setuptools_scm]
